[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entity/FormedDemonHolder.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entity/DemonAltar.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/slab.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 10, 150, 217, 74 )

[node name="DemonAltar" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 17
input_pickable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -20.5 )

[node name="Accept" type="Button" parent="." index="2"]
margin_left = -38.0
margin_top = 13.0
margin_right = -17.0
margin_bottom = 33.0
text = "A"

[node name="Clear" type="Button" parent="." index="3"]
margin_left = 11.0
margin_top = 13.0
margin_right = 31.0
margin_bottom = 33.0
text = "C"

[node name="PartPositions" type="Node2D" parent="." index="4"]

[node name="PartPosition1" type="Position2D" parent="PartPositions" index="0"]
position = Vector2( -57, -27 )

[node name="PartPosition2" type="Position2D" parent="PartPositions" index="1"]
position = Vector2( -19, -27 )

[node name="PartPosition3" type="Position2D" parent="PartPositions" index="2"]
position = Vector2( 19, -27 )

[node name="PartPosition4" type="Position2D" parent="PartPositions" index="3"]
position = Vector2( 57, -28 )

[connection signal="body_entered" from="." to="." method="_on_DemonAltar_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DemonAltar_body_exited"]
[connection signal="pressed" from="Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
